--- a/controlSistemas/src/app/pages/pages.component.html
+++ b/controlSistemas/src/app/pages/pages.component.html
@@ -1,3 +1,12 @@
-
-<h1>aca estpy</h1>
-<router-outlet></router-outlet>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-3">
+      <app-sidebar></app-sidebar>
+    </div>
+    <div class="col-md-9">
+      <div class="container">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
+</div>
