--- a/controlSistemas/src/app/pages/lst/lst-estado/lst-estado.component.html
+++ b/controlSistemas/src/app/pages/lst/lst-estado/lst-estado.component.html
@@ -1,1 +1,15 @@
-<p>lst-estado works!</p>
+<div class="container-fluid">
+    <br>
+    <div class="row alert alert-info">
+        <div class="col-md-6">
+            <legend for=""> <b>Lista de Estados</b></legend>
+        </div>
+        <div class="col-md-6">
+            <button class="btn btn-primary">
+                <i class="fa fa-pencil-square" aria-hidden="true"></i>&nbsp;
+                Agregar
+            </button>
+        </div>
+    </div>
+    <div class="row"></div>
+</div>
