--- a/controlSistemas/src/app/pages/lst/lst-estado/lst-estado.component.html
+++ b/controlSistemas/src/app/pages/lst/lst-estado/lst-estado.component.html
@@ -11,5 +11,24 @@
             </button>
         </div>
     </div>
-    <div class="row"></div>
+    <div class="row">
+        <table class="table table-bordered border-primary">
+            <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">First</th>
+                  <th scope="col">Last</th>
+                  <th scope="col">Handle</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Mark</td>
+                  <td>Otto</td>
+                  <td>@mdo</td>
+                </tr>
+              </tbody>
+          </table>
+    </div>
 </div>
