--- a/controlSistemas/src/app/pages/compartido/principal/principal.component.html
+++ b/controlSistemas/src/app/pages/compartido/principal/principal.component.html
@@ -4,7 +4,10 @@
       <app-sidebar></app-sidebar>
     </div>
     <div class="col-md-10">
-        <router-outlet></router-outlet>
-      </div>
+      <br />
+      <center>
+        <img width="600" height="500" src="./assets/img/logoUnidad.png" />
+      </center>
     </div>
   </div>
+</div>
