--- a/controlSistemas/src/app/pages/compartido/sidebar/sidebar.component.html
+++ b/controlSistemas/src/app/pages/compartido/sidebar/sidebar.component.html
@@ -14,7 +14,7 @@
       </a>
     </li>
     <li class="nav-link">
-      <a aria-current="page" [routerLink]="['/lst-tipoServidores/']">
+      <a aria-current="page" [routerLink]="['/lst-tipoServidor/']">
         <i class="fa fa-file-text-o" aria-hidden="true"></i>
         <b> Tipos de Servidores </b>
       </a>
