--- a/controlSistemas/src/app/pages/frm-abm/abm-sistemas/abm-sistemas.component.html
+++ b/controlSistemas/src/app/pages/frm-abm/abm-sistemas/abm-sistemas.component.html
@@ -141,6 +141,28 @@
           </app-combo-servidor>
         </div>
       </div>
+      <div class="form-group row">
+
+      <div class="col-md-6">
+        <label class="col-sm-12 col-form-label">Sistema Operativo:</label>
+        <select
+          [ngModelOptions]="{ standalone: true }"
+          [(ngModel)]="dtItem.gestorBd"
+          class="form-select text-center"
+          aria-label="Default select example"
+          formControlName="so"
+          [ngClass]="{ 'is-invalid': enviado && f['so'].errors }"
+        >
+          <option value="Windows Server">Windows Server</option>
+          <option value="Linux Debian">Linux Debian</option>
+          <option value="Windows 10">Windows 10</option>
+          <option value="Linux Ubuntu">Linux Ubuntu</option>
+        </select>
+        <div *ngIf="enviado && f['so'].errors" class="invalid-feedback">
+          <div *ngIf="f['so'].errors['required']">Campo obligatorio</div>
+        </div>
+      </div>
+    </div>
       <br />
       <br />
       <hr />
