--- a/controlSistemas/src/app/pages/compartido/principal/principal.component.html
+++ b/controlSistemas/src/app/pages/compartido/principal/principal.component.html
@@ -5,9 +5,26 @@
     </div>
     <div class="col-md-10">
       <br />
-      <center>
-        <img width="600" height="500" src="./assets/img/logoUnidad.png" />
-      </center>
+      <div class="row">
+        <center>
+          <img width="500" height="400" src="./assets/img/logoUnidad.png" />
+        </center>
+      </div>
+      <br />
+      <div class="row">
+        <div class="col-md-12">
+          <center>
+            <h2><b> División Tecnología de la Información </b></h2>
+          </center>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <center>
+            <h3> <b>Sección Análisis y Programación</b></h3>
+          </center>
+        </div>
+      </div>
     </div>
   </div>
 </div>
