--- a/controlSistemas/src/app/pages/compartido/sidebar/sidebar.component.html
+++ b/controlSistemas/src/app/pages/compartido/sidebar/sidebar.component.html
@@ -8,9 +8,21 @@
     </a>
     <hr>
     <li class="nav-link">
+      <a aria-current="page" [routerLink]="['/lst-entorno/']">
+        <i class="fa fa-laptop" aria-hidden="true"></i>
+        <b> Framework </b>
+      </a>
+    </li>
+    <li class="nav-link">
       <a aria-current="page" [routerLink]="['/lst-estados/']">
-        <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+        <i class="fa fa-stack-exchange" aria-hidden="true"></i>
         <b> Estados </b>
+      </a>
+    </li>
+    <li class="nav-link">
+      <a aria-current="page" [routerLink]="['/lst-solicitudes/']">
+        <i class="fa fa-archive" aria-hidden="true"></i>
+        <b> Solicitudes </b>
       </a>
     </li>
     <li class="nav-link">
