--- a/controlSistemas/src/app/pages/frm-abm/abm-servidores/abm-servidores.component.html
+++ b/controlSistemas/src/app/pages/frm-abm/abm-servidores/abm-servidores.component.html
@@ -16,7 +16,7 @@
             [(ngModel)]="item.nombre"
             id="codigo"
             type="text"
-            class="form-control"
+            class="form-control text-center"
             formControlName="nombre"
             [ngClass]="{ 'is-invalid': enviado && f['nombre'].errors }"
           />
@@ -60,7 +60,7 @@
             [(ngModel)]="item.ipServidor"
             id="codigo"
             type="text"
-            class="form-control"
+            class="form-control text-center"
             formControlName="ipServer"
             [ngClass]="{ 'is-invalid': enviado && f['ipServer'].errors }"
           />
