--- a/controlSistemas/src/app/pages/frm-abm/abm-estados/abm-estados.component.html
+++ b/controlSistemas/src/app/pages/frm-abm/abm-estados/abm-estados.component.html
@@ -15,7 +15,7 @@
             [(ngModel)]="item.nombre"
             id="codigo"
             type="text"
-            class="form-control"
+            class="form-control text-center"
             formControlName="nombre"
             [ngClass]="{ 'is-invalid': enviado && f['nombre'].errors }"
           />
