--- a/controlSistemas/src/app/pages/frm-abm/abm-sistemas/abm-sistemas.component.html
+++ b/controlSistemas/src/app/pages/frm-abm/abm-sistemas/abm-sistemas.component.html
@@ -9,6 +9,12 @@
     <form class="text-center" [formGroup]="form" (ngSubmit)="doAction()">
       <div class="form-group row">
         <div class="col-md-6">
+          <app-fil-buscador-solicitud 
+          [ngModelOptions]="{ standalone: true }"
+          (emmit)="seleccionSolicitud($event)">
+          </app-fil-buscador-solicitud>
+        </div>
+        <div class="col-md-6">
           <label for="Nombre" class="col-sm-12 col-form-label"
             >Fecha Presentación:</label
           >
@@ -30,20 +36,6 @@
               Campo obligatorio
             </div>
           </div>
-        </div>
-        <div class="col-md-6">
-          <div id="autocompletado" class="col-md-6">
-            <label for="" class="col-sm-12 col-form-label">Unidad:</label>
-            <app-fil-autocompletado-unidad
-              (unidadSeleccionada)="unidad($event)"
-            >
-            </app-fil-autocompletado-unidad>
-          </div>
-        </div>
-      </div>
-      <div *ngIf="item.unidad" class="row">
-        <div class="col-md-12 alert alert-info">
-          Unidad Seleccionada:&nbsp;&nbsp;<b>{{ item.nombreUnidad }}</b>
         </div>
       </div>
       <div class="form-group row">
@@ -150,7 +142,13 @@
         </div>
       </div>
       <div class="form-group row">
-        <div class="col-md-3"></div>
+        <div class="col-md-6">
+          <app-combo-entorno-lenguaje
+            [dibujar]="dtItem.entornoNavigation"
+            (emitir)="seleccionEntorno($event)"
+          >
+          </app-combo-entorno-lenguaje>
+        </div>
         <div class="col-md-6">
           <label class="col-sm-12 col-form-label">Sistema Gestor de Bd:</label>
           <select
